# m3dedup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/m3dedup/: __init__.py  cli.py  db.py  progress.py  scanner.py  scanner_async.py
tests/: test_m3dedup.py
