[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "m3dedup"
version = "0.1.0"
description = "Simple file deduplication scanner with SQLite"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
m3dedup = "m3dedup.cli:main"
